[gd_scene load_steps=19 format=3 uid="uid://b7qqqvyk1jec2"]

[ext_resource type="PackedScene" uid="uid://d36uxisc84scc" path="res://Scenes/Enemy/enemy.tscn" id="1_fl066"]
[ext_resource type="PackedScene" uid="uid://sewotho84phb" path="res://Assets/graphics/characters/nagonford/Nagonford_Animated.glb" id="2_ho28k"]
[ext_resource type="Script" path="res://Scenes/Enemy/boss.gd" id="2_vnhtf"]
[ext_resource type="Material" uid="uid://ga53lke5j2lg" path="res://Scenes/Characters/godette_overlay.tres" id="4_y3xtg"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_mn17q"]
radius = 0.936241
height = 4.51316

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_pirbm"]
animation = &"2H_Melee_Attack_Spin"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ktd8e"]
animation = &"1H_Melee_Attack_Slice_Horizontal"

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_kkv5l"]
fadein_time = 0.2
fadeout_time = 0.2

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_voubk"]
animation = &"2H_Melee_Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_y07ec"]
animation = &"Walking_C"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_1c225"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_yydut"]
xfade_time = 0.3

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_kgkf3"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_5yylw"]
states/idle/node = SubResource("AnimationNodeAnimation_voubk")
states/idle/position = Vector2(364, 94)
states/walk/node = SubResource("AnimationNodeAnimation_y07ec")
states/walk/position = Vector2(547, 92)
transitions = ["Start", "idle", SubResource("AnimationNodeStateMachineTransition_1c225"), "idle", "walk", SubResource("AnimationNodeStateMachineTransition_yydut"), "walk", "idle", SubResource("AnimationNodeStateMachineTransition_kgkf3")]

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_0v674"]

[sub_resource type="AnimationNodeTimeScale" id="AnimationNodeTimeScale_6bhba"]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_hca4g"]
graph_offset = Vector2(-116.352, 89.9211)
nodes/Animation/node = SubResource("AnimationNodeAnimation_pirbm")
nodes/Animation/position = Vector2(560, 440)
nodes/AttackAnimation/node = SubResource("AnimationNodeAnimation_ktd8e")
nodes/AttackAnimation/position = Vector2(-60, 440)
nodes/AttackOneShot/node = SubResource("AnimationNodeOneShot_kkv5l")
nodes/AttackOneShot/position = Vector2(360, 280)
nodes/MoveStateMachine/node = SubResource("AnimationNodeStateMachine_5yylw")
nodes/MoveStateMachine/position = Vector2(44.8274, 186.323)
nodes/SpinBlend/node = SubResource("AnimationNodeBlend2_0v674")
nodes/SpinBlend/position = Vector2(700, 80)
nodes/TimeScale/node = SubResource("AnimationNodeTimeScale_6bhba")
nodes/TimeScale/position = Vector2(920, 140)
nodes/output/position = Vector2(1200, 280)
node_connections = [&"AttackOneShot", 0, &"MoveStateMachine", &"AttackOneShot", 1, &"AttackAnimation", &"SpinBlend", 0, &"AttackOneShot", &"SpinBlend", 1, &"Animation", &"TimeScale", 0, &"SpinBlend", &"output", 0, &"TimeScale"]

[sub_resource type="SphereShape3D" id="SphereShape3D_leywk"]
radius = 4.29255

[node name="Boss" instance=ExtResource("1_fl066")]
script = ExtResource("2_vnhtf")

[node name="CollisionShape3D" parent="." index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.265, 0)
shape = SubResource("CapsuleShape3D_mn17q")

[node name="Skin" parent="." index="1" instance=ExtResource("2_ho28k")]
transform = Transform3D(3, 0, 0, 0, 3, 0, 0, 0, 3, -1.13868, 1.42071, 0)

[node name="Skeleton3D" parent="Skin/Rig" index="0"]
bones/1/position = Vector3(0.00841076, 0.35871, 1.21849e-10)
bones/2/rotation = Quaternion(-0.0605995, -0.130282, -0.00797808, 0.989591)
bones/3/rotation = Quaternion(0.037111, 0.00121331, -0.00986957, 0.999262)
bones/4/position = Vector3(0.248044, 0.110857, 0.0825816)
bones/4/rotation = Quaternion(-0.592985, -0.24348, -0.710136, 0.291193)
bones/4/scale = Vector3(0.999999, 0.999999, 1)
bones/5/rotation = Quaternion(3.29154e-08, -2.67822e-08, -0.620006, 0.784597)
bones/5/scale = Vector3(1, 1, 1)
bones/6/rotation = Quaternion(5.11846e-11, -3.07743e-10, 0.0266581, 0.999645)
bones/6/scale = Vector3(1, 1, 1)
bones/7/rotation = Quaternion(-0.140613, -0.705713, -0.0533107, 0.692355)
bones/8/position = Vector3(5.13846e-10, 0.0961251, -0.0575)
bones/8/rotation = Quaternion(-6.22192e-09, 4.31479e-09, -0.707107, 0.707107)
bones/8/scale = Vector3(1, 1, 1)
bones/9/position = Vector3(-0.176682, 0.111703, 0.0891542)
bones/9/rotation = Quaternion(-0.261897, 0.397435, 0.820307, 0.3171)
bones/9/scale = Vector3(0.999999, 0.999999, 1)
bones/10/rotation = Quaternion(1.50523e-08, 3.21795e-08, 0.52635, 0.850268)
bones/11/rotation = Quaternion(5.11843e-11, 3.07737e-10, -0.0266581, 0.999645)
bones/11/scale = Vector3(1, 1, 1)
bones/12/rotation = Quaternion(-0.27798, 0.184333, -0.0542231, 0.941174)
bones/13/position = Vector3(-5.13849e-10, 0.0961251, -0.0575)
bones/13/rotation = Quaternion(0.155711, -0.189455, 0.670289, 0.700409)
bones/13/scale = Vector3(1, 1, 1)
bones/15/rotation = Quaternion(0.0614817, 0.13051, 0.020107, 0.989335)
bones/17/position = Vector3(0.170945, 0.113587, 1.39233e-08)
bones/17/rotation = Quaternion(0.989057, 0.076218, 0.0418583, 0.119188)
bones/17/scale = Vector3(1, 1, 1)
bones/18/rotation = Quaternion(0.467492, 5.8983e-08, -3.1963e-07, 0.883997)
bones/19/rotation = Quaternion(-0.654105, -0.207191, 0.0760061, 0.723493)
bones/19/scale = Vector3(1, 1, 0.999999)
bones/20/rotation = Quaternion(-8.92119e-06, 0.920111, -0.391659, 1.92391e-06)
bones/21/rotation = Quaternion(0.984706, -0.0411783, -0.01325, 0.16877)
bones/21/scale = Vector3(1, 1, 1)
bones/22/rotation = Quaternion(0.497209, -5.86503e-08, 3.50203e-07, 0.867631)
bones/23/rotation = Quaternion(-0.661835, 0.109068, -0.0390784, 0.740643)
bones/23/scale = Vector3(1, 1, 0.999999)
bones/24/rotation = Quaternion(2.3141e-06, 0.920117, -0.391643, -2.40758e-08)
bones/24/scale = Vector3(1, 0.999997, 1)
bones/25/rotation = Quaternion(0.707107, -2.29302e-07, -4.60552e-08, 0.707107)
bones/26/rotation = Quaternion(-0.707107, -7.05285e-08, -7.05285e-08, 0.707107)
bones/27/position = Vector3(0.0308395, 0.382458, -2.86687e-15)
bones/27/rotation = Quaternion(1.00138e-08, 1.91522e-09, 0.984639, -0.174603)
bones/28/position = Vector3(3.75295e-09, 0.213436, -1.0343e-08)
bones/28/rotation = Quaternion(-9.99889e-08, 0.391084, 0.920355, -3.39507e-08)
bones/29/position = Vector3(2.3491e-08, 0.16565, -5.09136e-09)
bones/30/rotation = Quaternion(1, 2.30261e-09, 1.93335e-07, -4.39844e-16)
bones/32/rotation = Quaternion(0.707107, -3.82385e-08, 1.45009e-07, 0.707107)
bones/33/rotation = Quaternion(-0.707107, -7.05285e-08, -7.05285e-08, 0.707107)
bones/34/rotation = Quaternion(-5.83589e-09, 6.43837e-10, 0.994809, 0.101756)
bones/35/position = Vector3(-1.11482e-08, 0.213436, -2.50942e-15)
bones/35/rotation = Quaternion(-1.05796e-07, 0.391084, 0.920355, -2.58643e-08)
bones/36/position = Vector3(-6.31128e-09, 0.16565, 2.70695e-09)
bones/37/rotation = Quaternion(1, 3.76526e-09, 1.94879e-07, 7.45058e-09)
bones/39/position = Vector3(0.839842, 0.719866, -0.447558)
bones/39/rotation = Quaternion(-0.707107, -7.27951e-08, -7.27951e-08, 0.707107)
bones/40/position = Vector3(0.34417, 0.794787, 0.391982)
bones/40/rotation = Quaternion(0.632783, 0.0769705, 0.425225, 0.64253)
bones/41/position = Vector3(-0.87741, 1.03555, -0.447559)
bones/41/rotation = Quaternion(-0.707107, -7.27951e-08, -7.27951e-08, 0.707107)
bones/42/position = Vector3(-0.365977, 0.81518, 0.29528)
bones/42/rotation = Quaternion(0.287627, -0.224155, -0.919724, 0.145374)

[node name="Nagonford_Axe" parent="Skin/Rig/Skeleton3D" index="0"]
transform = Transform3D(0.183395, 0.819291, 0.543256, 0.610234, 0.338379, -0.716319, -0.7707, 0.462883, -0.437903, -0.320033, 0.678937, 0.36577)

[node name="Nagonford_Axe" parent="Skin/Rig/Skeleton3D/Nagonford_Axe" index="0"]
transform = Transform3D(1, 0, 0, 0, 0.866025, -0.5, 0, 0.5, 0.866025, 0, 0, 0)

[node name="RayCast3D" type="RayCast3D" parent="Skin/Rig/Skeleton3D/Nagonford_Axe/Nagonford_Axe" index="0"]
target_position = Vector3(0, 1.36, 0)
collision_mask = 2

[node name="MagicSpawnPoint" type="Marker3D" parent="Skin/Rig/Skeleton3D/Nagonford_Axe/Nagonford_Axe" index="1"]
transform = Transform3D(1, -1.30385e-08, -7.45058e-09, -4.65661e-08, 1, 5.96046e-08, 2.79397e-09, -5.96046e-08, 1, 0.0667613, 1.29262, -0.017774)

[node name="Nagonford_Cape" parent="Skin/Rig/Skeleton3D" index="1"]
transform = Transform3D(0.965926, 0.0315801, -0.256885, -0.0198731, 0.998647, 0.0480429, 0.258055, -0.0413008, 0.965247, 0.0279199, 1.16579, -0.0542458)

[node name="Nagonford_ArmLeft" parent="Skin/Rig/Skeleton3D" index="2"]
material_overlay = ExtResource("4_y3xtg")

[node name="Nagonford_ArmRight" parent="Skin/Rig/Skeleton3D" index="3"]
material_overlay = ExtResource("4_y3xtg")

[node name="Nagonford_Body" parent="Skin/Rig/Skeleton3D" index="4"]
material_overlay = ExtResource("4_y3xtg")

[node name="Nagonford_Head" parent="Skin/Rig/Skeleton3D" index="5"]
material_overlay = ExtResource("4_y3xtg")

[node name="Nagonford_LegLeft" parent="Skin/Rig/Skeleton3D" index="6"]
material_overlay = ExtResource("4_y3xtg")

[node name="Nagonford_LegRight" parent="Skin/Rig/Skeleton3D" index="7"]
material_overlay = ExtResource("4_y3xtg")

[node name="AnimationTree" parent="." index="2"]
root_node = NodePath("../Skin")
tree_root = SubResource("AnimationNodeBlendTree_hca4g")
anim_player = NodePath("../Skin/AnimationPlayer")
parameters/AttackOneShot/active = false
parameters/AttackOneShot/internal_active = false
parameters/AttackOneShot/request = 0
parameters/SpinBlend/blend_amount = 0
parameters/TimeScale/scale = 0.5

[node name="AttackTimer" parent="Timers" index="0"]
wait_time = 5.0
autostart = true

[node name="Area3D" type="Area3D" parent="." index="4"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.30534, 0)
shape = SubResource("SphereShape3D_leywk")

[connection signal="timeout" from="Timers/AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]

[editable path="Skin"]
